// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignment 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-vqn2g8"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-eqsycl"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-tfelz2"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1pg3rlk"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-eqsycl"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-tfelz2"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-h-stack css-1pg3rlk"
  data-g2-c16t="true"
  data-g2-component="HStack"
>
  <div
    class="wp-components-flex-item css-h5jpv5"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
  <div
    class="wp-components-flex-item css-tfelz2"
    data-g2-c16t="true"
    data-g2-component="FlexItem"
  >
    <div
      class="wp-components-view css-1oanc4k"
      data-g2-c16t="true"
      data-g2-component="View"
    />
  </div>
</div>
`;
